[package]
name = "w_collider"
version = "0.1.0"
edition = "2024"

[dependencies]
rs-snowflake = "0.6.0"
once_cell = "1.21.3"
dotenvy = "0.15"
http = "1.3.1"
rand = "0.9"
anyhow = "1.0.98"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3"
itoa = "1.0"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.32.4", features = ["aio", "tokio-comp"] }
actix-web = { version = "4", default-features = false, features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.15", default-features = false, features = [
    "serde_impl",
] }
serde_json = { version = "1.0.141", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "json",
] }
